@@ -71,6 +71,16 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>March 7, 2009</h3>
+   	      <b>Unstable</b> version 0.13.6 released!  New features since
+   	      version 0.13.5 include:
+   	      <ul>
+   	        <li>Fixes to link handling in notes.</li>
+   	        <li>Printing support added to Mac OS X version.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_13_6/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>February 16, 2009</h3>
    	      <b>Unstable</b> version 0.13.5 released!  New features since
    	      version 0.13.4 include:
