@@ -1,3 +1,8 @@
+2008-03-07  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.13.6 release.
+	* download.html: Ditto.
+
 2008-02-02  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.13.5 release.
